Added new structure to village

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public-f net.minecraft.world.entity.animal.Chicken f_28233_ # FOOD_ITEMS
 public-f net.minecraft.world.entity.animal.Pig f_29458_ # FOOD_ITEMS
+public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210559_ # rawTemplates
+public net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210560_  # templates
