--- a/src/main/resources/data/veggiesdelight/loot_tables/chests/vd_village_snowy_house.json
+++ b/src/main/resources/data/veggiesdelight/loot_tables/chests/vd_village_snowy_house.json
@@ -34,6 +34,34 @@
             }
           ],
           "name": "veggiesdelight:cauliflower_seeds"
+        },
+        {
+          "type": "minecraft:item",
+          "functions": [
+            {
+              "function": "minecraft:set_count",
+              "count": {
+                "min": 1.0,
+                "max": 3.0,
+                "type": "minecraft:uniform"
+              }
+            }
+          ],
+          "name": "veggiesdelight:sweet_potato"
+        },
+        {
+          "type": "minecraft:item",
+          "functions": [
+            {
+              "function": "minecraft:set_count",
+              "count": {
+                "min": 1.0,
+                "max": 3.0,
+                "type": "minecraft:uniform"
+              }
+            }
+          ],
+          "name": "veggiesdelight:turnip"
         }
       ]
     }
