--- a/build.gradle
+++ b/build.gradle
@@ -117,7 +117,7 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("curse.maven:farmers-delight-398521:${4679319}")
+    implementation fg.deobf("curse.maven:farmers-delight-398521:6597298")
 
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"))
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
