--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ mapping_version=2023.06.26-1.20.1
 mod_id=veggiesdelight
 mod_name=Veggies Delight
 mod_license=MIT
-mod_version=1.8.3
+mod_version=1.9
 mod_group_id=net.mehdinoui.veggiesdelight
 mod_authors=mehdinoui
-mod_description=Thank you for downloading Veggies Delight. This mod proves that anyone can make a mod.
+mod_description=An addon mod for Farmer's Delight that expand it with a variety of new vegetables, food and structures.
