--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,19 @@
+// Forge build script for Veggies Delight mod
+// Targets Minecraft 1.20.1 and Java 17
 plugins {
     id 'eclipse'
     id 'idea'
     id 'maven-publish'
+    // Forge Plugins
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.spongepowered.mixin' version '0.7.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
-
+// Global project metadata setup
 version = mod_version
 group = mod_group_id
 
+// name for the archive (JAR file)
 base {
     archivesName = "VeggiesDelight-1.20.1"
 }
@@ -21,70 +25,59 @@ println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty '
 
 minecraft {
     mappings channel: mapping_channel, version: mapping_version
-
+    // Access Transformer set up
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     copyIdeResources = true
 
     runs {
-        // applies to all the run configs below
         configureEach {
             workingDirectory project.file('run')
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-
             mods {
                 "${mod_id}" {
                     source sourceSets.main
                 }
             }
         }
-
         client {
             workingDirectory project.file('run')
-
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
-
             mods {
                 farmersdelight {
                     source sourceSets.main
                 }
             }
         }
-
         server {
             workingDirectory project.file('run')
-
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
-
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
-
             mods {
                 farmersdelight {
                     source sourceSets.main
                 }
             }
         }
-
         gameTestServer {
             property 'forge.enabledGameTestNamespaces', mod_id
         }
-
         data {
             workingDirectory project.file('run-data')
-
             args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
         }
     }
 }
 
+// Data generation
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
+// Repositories for Forge dependencies
 repositories {
     maven {
         // CraftTweaker and JEI
@@ -114,6 +107,7 @@ repositories {
     maven { url "https://maven.ryanliptak.com/" }
 }
 
+// Mod dependencies
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
@@ -128,7 +122,7 @@ dependencies {
     runtimeOnly fg.deobf("squeek.appleskin:appleskin-forge:${appleskin_version}")
 }
 
-
+// Task for resource processing
 tasks.named('processResources', ProcessResources).configure {
     var replaceProperties = [
             minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
@@ -144,6 +138,7 @@ tasks.named('processResources', ProcessResources).configure {
     }
 }
 
+// Task for creating the final JAR file
 tasks.named('jar', Jar).configure {
     manifest {
         attributes([
