--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,18 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+
+# Parchment
 parchment_minecraft_version=1.21.1
 parchment_mappings_version=2024.11.17
 
 # Environment Properties
-
 minecraft_version=1.21.1
 minecraft_version_range=[1.21.1]
 neo_version=21.1.203
 loader_version_range=[1,)
-jei_version=19.8.4.113
-appleskin_version=mc1.21-3.0.5
 
 ## Mod Properties
-
 mod_id=veggiesdelight
 mod_name=Veggies Delight
 mod_license=MIT
@@ -24,3 +22,7 @@ mod_version=1.9
 mod_group_id=net.mehdinoui.veggiesdelight
 mod_authors=mehdinoui
 mod_description=An addon mod for Farmer's Delight that expand it with a variety of new vegetables, food and structures.
+
+# Dependency Infos
+jei_version=19.8.4.113
+appleskin_version=mc1.21-3.0.5
