--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Parchment
+mapping_channel=parchment
+mapping_version=2023.06.26-1.20.1
+
 ## Environment Properties
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1]
 forge_version=47.2.0
 forge_version_range=[47,)
 loader_version_range=[47,)
-jei_version=15.3.0.4
-appleskin_version=mc1.20.1-2.5.0
-mapping_channel=parchment
-mapping_version=2023.06.26-1.20.1
 
 ## Mod Properties
 mod_id=veggiesdelight
@@ -20,3 +20,7 @@ mod_version=1.9
 mod_group_id=net.mehdinoui.veggiesdelight
 mod_authors=mehdinoui
 mod_description=An addon mod for Farmer's Delight that expand it with a variety of new vegetables, food and structures.
+
+# Dependency Infos
+jei_version=15.3.0.4
+appleskin_version=mc1.20.1-2.5.0
