add and allow villagers to want and eat certain food items (not to be confused with plantable items)

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,4 @@
-public-f net.minecraft.world.entity.animal.Chicken FOOD_ITEMS # FOOD_ITEMS
-public-f net.minecraft.world.entity.animal.Pig FOOD_ITEMS # FOOD_ITEMS
+public-f net.minecraft.world.entity.npc.Villager WANTED_ITEMS # WANTED_ITEMS
+public-f net.minecraft.world.entity.npc.Villager FOOD_POINTS # FOOD_POINTS
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool rawTemplates # rawTemplates
 public net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool templates  # templates
